@@ -24,9 +24,11 @@ anchor_right = 1.0
 anchor_bottom = 1.0
 grow_horizontal = 2
 grow_vertical = 2
+mouse_filter = 2
 
 [node name="SelectCardsFromHand" parent="HUD" instance=ExtResource("3_g4tnu")]
 unique_name_in_owner = true
+visible = false
 layout_mode = 1
 offset_left = -405.0
 offset_top = -214.5
