@@ -1,6 +1,8 @@
-[gd_scene load_steps=2 format=3 uid="uid://dt60jvmuuttc0"]
+[gd_scene load_steps=4 format=3 uid="uid://dt60jvmuuttc0"]
 
 [ext_resource type="Script" uid="uid://cd7ssfasr14ha" path="res://HUD/SelectCardsFromHandComponent.cs" id="1_1ypnk"]
+[ext_resource type="Script" uid="uid://dwrq2pnaqfw1s" path="res://HUD/DropArea.cs" id="2_ma3nu"]
+[ext_resource type="PackedScene" uid="uid://cnp5v17a7qgwg" path="res://Board/CardLineDynamic.tscn" id="3_g0jyd"]
 
 [node name="SelectCardsFromHand" type="PanelContainer"]
 anchors_preset = 8
@@ -31,15 +33,41 @@ layout_mode = 2
 theme_override_font_sizes/font_size = 32
 text = "Drag Cards to Mulligan"
 
-[node name="DropArea" type="Control" parent="MarginContainer/VBoxContainer"]
-custom_minimum_size = Vector2(800, 300)
+[node name="Drop" type="Control" parent="MarginContainer/VBoxContainer"]
+custom_minimum_size = Vector2(900, 300)
 layout_mode = 2
+
+[node name="DropArea" type="Control" parent="MarginContainer/VBoxContainer/Drop"]
+unique_name_in_owner = true
+anchors_preset = 0
+offset_top = 4.0
+offset_right = 900.0
+offset_bottom = 304.0
+script = ExtResource("2_ma3nu")
+metadata/_custom_type_script = "uid://dwrq2pnaqfw1s"
+
+[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Drop"]
+layout_mode = 1
+anchors_preset = 15
+anchor_right = 1.0
+anchor_bottom = 1.0
+grow_horizontal = 2
+grow_vertical = 2
+mouse_filter = 2
+
+[node name="SelectedCards" parent="MarginContainer/VBoxContainer/Drop/CenterContainer" instance=ExtResource("3_g0jyd")]
+unique_name_in_owner = true
+layout_mode = 2
+Separation = 0
+HideCards = false
+Shrinks = true
 
 [node name="ButtonList" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
 layout_mode = 2
 
-[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ButtonList"]
+[node name="Confirm" type="Button" parent="MarginContainer/VBoxContainer/ButtonList"]
+unique_name_in_owner = true
 layout_mode = 2
 size_flags_horizontal = 3
 theme_override_font_sizes/font_size = 42
-text = "OK"
+text = "Confirm"
